--- a/templates/about.html
+++ b/templates/about.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>О нас</h1>
-    {% comment %} Используем фильтр с значением по умолчанию {% endcomment %}
-    <p>Пользователей: {{ users_count }}</p>
-  </body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}О сайте{% endblock %}
+
+{% block content %}
+<h1>О сайте</h1>
+<p>Пользователей <i class="bi bi-clipboard-check"></i> {{ users_count }}</p>
+{% endblock %}
