--- a/blog/templates/includes/post_preview.html
+++ b/blog/templates/includes/post_preview.html
@@ -30,11 +30,11 @@
 отрисовывается в цикле for post in posts {% endcomment %}
 
 {% comment %} Представляет собой краткое отображение постов в каталоге постов отрисовывается в цикле for post in posts {% endcomment %}
-
+{% load markdown_to_html %}
 <div class="card h-100 mt-3 mb-3">
   <div class="card-body">
-    <h5 class="card-title">{{ post.title }}</h5>
-    <p class="card-text">{{ post.text|truncatewords:30 }}</p>
+    <h5 class="card-title">{% markdown_to_html post.title %}</h5>
+    <p class="card-text">{% markdown_to_html post.text|truncatewords:30 %}</p>
     <div class="d-flex justify-content-between align-items-center">
       <div>
         <span class="me-3"><i class="bi bi-chat-dots"></i> {{ post.comments|length }}</span>
