--- a/static/css/blog_catalog.css
+++ b/static/css/blog_catalog.css
@@ -7,3 +7,29 @@ div.card:hover {
     /* Слабая тень */
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
+
+/* Глобальный стиль для всех полей ввода */
+input:focus, textarea:focus, select:focus {
+    outline: none !important; /* Убрать стандартную обводку */
+    box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.25) !important; /* Серая обводка */
+    border-color: #6c757d !important; /* Серая обводка */
+}
+
+
+/* Стили для чекбоксов */
+input[type="checkbox"] {
+    accent-color: #343a40; /* Темный цвет для активного состояния */
+    border: 1px solid #6c757d; /* Серый бордер */
+}
+
+input[type="checkbox"]:checked {
+    background-color: #343a40; /* Темный цвет для активного состояния */
+    border-color: #495057; /* Темный бордер */
+    outline: none; /* Убрать голубую обводку */
+}
+
+input[type="checkbox"]:focus {
+    outline: none; /* Убрать голубую обводку */
+    box-shadow: none; /* Убрать тень */
+    border-color: #495057; /* Темный бордер для фокуса */
+}
