--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -1,21 +1,24 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">ЛОГОТИП</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Переключатель навигации">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          {% for item in menu %}
-          <li class="nav-item">
-            <a class="nav-link 
-            {% if item.alias == page_alias %} 
-            active 
-            {% endif %}"
-            href="{% url item.alias %}">{{ item.name }}</a>
-          </li>
-            {% endfor %}
-        </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="{% static 'images/logo.webp' %}" alt="ЛОГОТИП" style="height: 40px;"> <!-- Здесь укажите путь к вашему логотипу и задайте желаемый размер -->
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Переключатель навигации">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        {% for item in menu %}
+        <li class="nav-item">
+          <a class="nav-link 
+          {% if item.alias == page_alias %} 
+          active 
+          {% endif %}"
+          href="{% url item.alias %}">{{ item.name }}</a>
+        </li>
+          {% endfor %}
       </div>
     </div>
+  </div>
 </nav>
