doc: мелкие комментарии

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% comment %} blog/templates/blog/post_detail.html {% endcomment %}
 {% load markdown_to_html %}
 {% block title %}{{ post.title }}{% endblock %}
 {% block content %}
