--- a/blog/templates/blog/blog_catalog.html
+++ b/blog/templates/blog/blog_catalog.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% comment %} blog/templates/blog/blog_catalog.html {% endcomment %}
 {% load static %}
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/blog_catalog.css' %}" />
