--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,7 +10,7 @@
             <p class="card-text">{% markdown_to_html post.text %}</p>
             <p class="card-text"><strong>Автор:</strong> {{ post.author|default:"Автор не известен" }}</p>
             <p class="card-text"><strong>Дата публикации:</strong> {{ post.published_date }}</p>
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center mb-2">
                 <div>
                     <span class="me-3"><i class="bi bi-chat-dots"></i> {{ post.comments|length }}</span>
                 </div>
@@ -22,6 +22,15 @@
                         Вернуться к каталогу
                     </a>
                 </div>
+            </div>
+            <div>
+                {% if post.tags %}
+                    <div class="tags">
+                        {% for tag in post.tags %}
+                            <span class="badge bg-secondary">{{ tag }}</span>
+                        {% endfor %}
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
