--- a/blog/templates/includes/post_preview.html
+++ b/blog/templates/includes/post_preview.html
@@ -1,41 +1,9 @@
-{% comment %} Представляет собой краткое
-отображение постов в каталоге постов
-
-отрисовывается в цикле for post in posts
-
-Пример поста
-
-{
-        "category": "Python",
-        "tags": ["основы", "синтаксис", "советы"],
-        "slug": "introduction-to-python",
-        "title": "Введение в Python",
-        "text": ("Python — это высокоуровневый язык программирования с простым синтаксисом и мощными библиотеками. "
-                 "Он широко используется для разработки веб-приложений, анализа данных, научных исследований и автоматизации задач. "
-                 "Благодаря своей универсальности и поддержке сообщества, Python стал одним из самых популярных языков программирования в мире. "
-                 "Кроме того, наличие множества онлайн-курсов и документации делает его отличным выбором для начинающих. "
-                 "В этой статье мы рассмотрим основные концепции и примеры использования Python."),
-        "author": "Иван Петров",
-        "published_date": "2024-06-25",
-        "comments": [
-            {"author": "Алексей Смирнов", "text": "Отличная статья для новичков!", "date": "2024-06-26"},
-            {"author": "Мария Иванова", "text": "Python действительно лучший выбор для начинающих.", "date": "2024-06-27"}
-        ]
-    }
-
-{% endcomment %}
-
-
-{% comment %} Представляет собой краткое отображение постов в каталоге постов
-отрисовывается в цикле for post in posts {% endcomment %}
-
-{% comment %} Представляет собой краткое отображение постов в каталоге постов отрисовывается в цикле for post in posts {% endcomment %}
 {% load markdown_to_html %}
 <div class="card h-100 mt-3 mb-3">
   <div class="card-body">
     <h5 class="card-title">{% markdown_to_html post.title %}</h5>
     <p class="card-text">{% markdown_to_html post.text|truncatewords:30 %}</p>
-    <div class="d-flex justify-content-between align-items-center">
+    <div class="d-flex justify-content-between align-items-center mb-2">
       <div>
         <span class="me-3"><i class="bi bi-chat-dots"></i> {{ post.comments|length }}</span>
         <span><i class="bi bi-calendar"></i> {{ post.published_date }}</span>
@@ -48,6 +16,15 @@
             Читать далее
         </a>
       </div>
+    </div>
+    <div>
+      {% if post.tags %}
+        <div class="tags">
+          {% for tag in post.tags %}
+            <span class="badge bg-secondary">{{ tag }}</span>
+          {% endfor %}
+        </div>
+      {% endif %}
     </div>
   </div>
 </div>
