--- a/blog/templates/includes/post_preview.html
+++ b/blog/templates/includes/post_preview.html
@@ -21,7 +21,7 @@
       {% if post.tags %}
         <div class="tags">
           {% for tag in post.tags %}
-            <span class="badge bg-secondary">{{ tag }}</span>
+            <span class="tag badge">{{ tag }}</span>
           {% endfor %}
         </div>
       {% endif %}
