--- a/templates/base.html
+++ b/templates/base.html
@@ -27,11 +27,15 @@
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
       />
-      {% comment %} Подключил стили для футера {% endcomment %}
-      <link rel="stylesheet" href="{% static 'css/footer.css' %}" />
-      <link rel="stylesheet" href="{% static 'css/post_detail.css' %}" />
+     
+
       {% comment %} Стили для библиотеки highlight.js {% endcomment %}
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/tomorrow-night-bright.min.css">
+
+       {% comment %} Пользовательские стили {% endcomment %}
+       <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+       <link rel="stylesheet" href="{% static 'css/footer.css' %}" />
+       <link rel="stylesheet" href="{% static 'css/post_detail.css' %}" />
       {% block head %}{% endblock %}
     </head>
     <body>
