--- a/static/css/blog_catalog.css
+++ b/static/css/blog_catalog.css
@@ -33,3 +33,10 @@ input[type="checkbox"]:focus {
     box-shadow: none; /* Убрать тень */
     border-color: #495057; /* Темный бордер для фокуса */
 }
+
+input.form-control {
+    /* больше высота */
+    height: 3rem;
+    /* больше размер шрифта */
+    font-size: 1.25rem;
+}
