--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,44 +1,56 @@
 {% extends 'base.html' %}
 {% comment %} blog/templates/blog/post_detail.html {% endcomment %}
 {% load markdown_to_html %}
+{% load static %}
 {% block title %}{{ post.title }}{% endblock %}
 {% block content %}
-<div class="container mt-5">
-    <div class="card">
-        <div class="card-body">
-            <h5 class="card-title">{% markdown_to_html post.title %}</h5>
-            <p class="card-text">{% markdown_to_html post.text %}</p>
-            <p class="card-text"><strong>Автор:</strong> {{ post.author|default:"Автор не известен" }}</p>
-            <p class="card-text"><strong>Дата публикации:</strong> {{ post.published_date }}</p>
-            <div class="d-flex justify-content-between align-items-center mb-2">
-                <div>
-                    <span class="me-3"><i class="bi bi-chat-dots"></i> {{ post.comments|length }}</span>
-                </div>
-                <div>
-                    <a href="{% url 'blog_catalog' %}" class="btn btn-dark d-block d-md-none">
-                        <i class="bi bi-arrow-left"></i>
-                    </a>
-                    <a href="{% url 'blog_catalog' %}" class="btn btn-dark d-none d-md-block">
-                        Вернуться к каталогу
-                    </a>
-                </div>
-            </div>
-            <div>
-                {% if post.tags %}
-                    <div class="tags">
-                        {% for tag in post.tags %}
-                            <span class="tag badge">{{ tag }}</span>
-                        {% endfor %}
+<div class="row mt-5">
+    <div class="col-lg-2 d-none d-lg-block">
+        <nav id="toc" class="nav flex-column sticky-top">
+            <h5>Содержание</h5>
+            <!-- Содержимое будет добавлено с помощью JS -->
+        </nav>
+    </div>
+    <div class="col-lg-10">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">{% markdown_to_html post.title %}</h5>
+                <p class="card-text">{% markdown_to_html post.text %}</p>
+                <p class="card-text"><strong>Автор:</strong> {{ post.author|default:"Автор не известен" }}</p>
+                <p class="card-text"><strong>Дата публикации:</strong> {{ post.published_date }}</p>
+                <div class="d-flex justify-content-between align-items-center mb-2">
+                    <div>
+                        <span class="me-3"><i class="bi bi-chat-dots"></i> {{ post.comments|length }}</span>
                     </div>
-                {% endif %}
+                    <div>
+                        <a href="{% url 'blog_catalog' %}" class="btn btn-dark d-block d-md-none">
+                            <i class="bi bi-arrow-left"></i>
+                        </a>
+                        <a href="{% url 'blog_catalog' %}" class="btn btn-dark d-none d-md-block">
+                            Вернуться к каталогу
+                        </a>
+                    </div>
+                </div>
+                <div>
+                    {% if post.tags %}
+                        <div class="tags">
+                            {% for tag in post.tags %}
+                                <span class="tag badge">{{ tag }}</span>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                </div>
             </div>
         </div>
-    </div>
-    <div class="mt-4">
-        <h5>Комментарии</h5>
-        {% for comment in post.comments %}
-            {% include "includes/comment_include.html" %}
-        {% endfor %}
+        <div class="mt-4">
+            <h5>Комментарии</h5>
+            {% for comment in post.comments %}
+                {% include "includes/comment_include.html" %}
+            {% endfor %}
+        </div>
     </div>
 </div>
+{% endblock %}
+{% block scripts %}
+<script src="{% static 'js/toc.js' %}"></script>
 {% endblock %}
