--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -15,7 +15,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">{% markdown_to_html post.title %}</h5>
-                <p class="card-text">{% markdown_to_html post.text %}</p>
+                <p class="card-text">{% markdown_to_html post.text|safe %}</p>
                 <p class="card-text"><strong>Автор:</strong> {{ post.author|default:"Автор не известен" }}</p>
                 <p class="card-text"><strong>Дата публикации:</strong> {{ post.published_date }}</p>
                 <div class="d-flex justify-content-between align-items-center mb-2">
