js: всем картинкам img-fluid от BS5

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,7 @@
       {% comment %} Скрипт для подсветки синтаксиса {% endcomment %}
       <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
       <script>hljs.highlightAll();</script>
+      <script src="{% static 'js/add_img_class.js' %}"></script>
       {% block scripts %}{% endblock %}
     </body>
   </html>
