--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,6 +3,7 @@
 {% load markdown_to_html %}
 {% load static %}
 {% block title %}{{ post.title }}{% endblock %}
+{% block head %}<link rel="stylesheet" href="{% static 'css/post_detail.css' %}" />{% endblock  %}
 {% block content %}
 <div class="row mt-5">
     <div class="col-lg-2 d-none d-lg-block">
