--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,8 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
       />
      
+      {% comment %} Стили для библиотеки markdown-editor {% endcomment %}
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/markdown-editor/dist/css/markdown-editor.min.css">
 
       {% comment %} Стили для библиотеки highlight.js {% endcomment %}
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/tomorrow-night-bright.min.css">
@@ -59,6 +61,10 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"
       ></script>
+      {% comment %} Скрипт для библиотеки markdown-editor {% endcomment %}
+      <script src="https://cdn.jsdelivr.net/npm/markdown-editor/dist/js/markdown-editor.min.js"
+      ></script>
+
       {% comment %} Скрипт для подсветки синтаксиса {% endcomment %}
       <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
       <script>hljs.highlightAll();</script>
