--- a/blog/templates/includes/post_preview.html
+++ b/blog/templates/includes/post_preview.html
@@ -1,8 +1,8 @@
-{% load markdown_to_html %}
+
 <div class="card h-100 mt-3 mb-3">
   <div class="card-body">
-    <h5 class="card-title">{% markdown_to_html post.title %}</h5>
-    <p class="card-text">{% markdown_to_html post.text|truncatewords:30|safe %}</p>
+    <h5 class="card-title">{{  post.title }}</h5>
+    <p class="card-text">{{ post.text|truncatewords:30|safe }}</p>
     <div class="d-flex justify-content-between align-items-center mb-2">
       <div>
         <span class="me-3"><i class="bi bi-chat-dots"></i> {{ post.comments|length }}</span>
