--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -33,9 +33,9 @@
                     </div>
                 </div>
                 <div>
-                    {% if post.tags %}
+                    {% if post.tags.all %}
                         <div class="tags">
-                            {% for tag in post.tags %}
+                            {% for tag in post.tags.all %}
                                 <span class="tag badge">{{ tag }}</span>
                             {% endfor %}
                         </div>
