--- a/blog/templates/includes/post_preview.html
+++ b/blog/templates/includes/post_preview.html
@@ -18,9 +18,9 @@
       </div>
     </div>
     <div>
-      {% if post.tags %}
+      {% if post.tags.all %}
         <div class="tags">
-          {% for tag in post.tags %}
+          {% for tag in post.tags.all %}
             <span class="tag badge">{{ tag }}</span>
           {% endfor %}
         </div>
