views: вьюшки отображения постов по тегам и категориям

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -36,6 +36,7 @@
                     {% if post.tags.all %}
                         <div class="tags">
                             {% for tag in post.tags.all %}
+                            {% comment %} #TODO - ссылка на вьюшку тег детально {% endcomment %}
                                 <span class="tag badge">{{ tag }}</span>
                             {% endfor %}
                         </div>
