--- a/blog/templates/includes/post_preview.html
+++ b/blog/templates/includes/post_preview.html
@@ -2,7 +2,7 @@
 <div class="card h-100 mt-3 mb-3">
   <div class="card-body">
     <h5 class="card-title">{% markdown_to_html post.title %}</h5>
-    <p class="card-text">{% markdown_to_html post.text|truncatewords:30 %}</p>
+    <p class="card-text">{% markdown_to_html post.text|truncatewords:10 %}</p>
     <div class="d-flex justify-content-between align-items-center mb-2">
       <div>
         <span class="me-3"><i class="bi bi-chat-dots"></i> {{ post.comments|length }}</span>
@@ -21,6 +21,7 @@
       {% if post.tags.all %}
         <div class="tags">
           {% for tag in post.tags.all %}
+          {% comment %} #TODO - ссылка на вьюшку тег детально {% endcomment %}
             <span class="tag badge">{{ tag }}</span>
           {% endfor %}
         </div>
