--- a/blog/templates/includes/post_preview.html
+++ b/blog/templates/includes/post_preview.html
@@ -5,6 +5,7 @@
     <p class="card-text">{% markdown_to_html post.text|truncatewords:10 %}</p>
     <div class="d-flex justify-content-between align-items-center mb-2">
       <div>
+        <span><i class="bi bi-eye">{{ post.views }}</i></span>
         <span class="me-3"><i class="bi bi-chat-dots"></i> {{ post.comments|length }}</span>
         <span><i class="bi bi-calendar"></i> {{ post.published_date }}</span>
       </div>
