--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -36,8 +36,10 @@
                     {% if post.tags.all %}
                         <div class="tags">
                             {% for tag in post.tags.all %}
-                            {% comment %} #TODO - ссылка на вьюшку тег детально {% endcomment %}
-                                <span class="tag badge">{{ tag }}</span>
+                            {% comment %} вместа текста тега, tag.slug по маршруту tag_list
+                            общий класс tag badge
+                            {% endcomment %}
+                                <span class="tag badge"> <a href="{% url 'tag_list' tag.slug %}">{{ tag }}</a></span>
                             {% endfor %}
                         </div>
                     {% endif %}
