--- a/blog/templates/includes/post_preview.html
+++ b/blog/templates/includes/post_preview.html
@@ -6,26 +6,36 @@
     <div class="d-flex justify-content-between align-items-center mb-2">
       <div>
         <span><i class="bi bi-eye">{{ post.views }}</i></span>
-        <span class="me-3"><i class="bi bi-chat-dots"></i> {{ post.comments|length }}</span>
+        <span class="me-3"
+          ><i class="bi bi-chat-dots"></i> {{ post.comments|length }}</span
+        >
         <span><i class="bi bi-calendar"></i> {{ post.published_date }}</span>
       </div>
       <div>
-        <a href="{% url 'post_detail' post.slug %}" class="btn btn-dark d-block d-md-none">
-            <i class="bi bi-arrow-right"></i>
+        <a
+          href="{% url 'post_detail' post.slug %}"
+          class="btn btn-dark d-block d-md-none"
+        >
+          <i class="bi bi-arrow-right"></i>
         </a>
-        <a href="{% url 'post_detail' post.slug %}" class="btn btn-dark d-none d-md-block">
-            Читать далее
+        <a
+          href="{% url 'post_detail' post.slug %}"
+          class="btn btn-dark d-none d-md-block"
+        >
+          Читать далее
         </a>
       </div>
     </div>
     <div>
       {% if post.tags.all %}
-        <div class="tags">
-          {% for tag in post.tags.all %}
-          {% comment %} #TODO - ссылка на вьюшку тег детально {% endcomment %}
-            <span class="tag badge">{{ tag }}</span>
-          {% endfor %}
-        </div>
+      <div class="tags">
+        {% for tag in post.tags.all %} {% comment %} #TODO - ссылка на вьюшку
+        тег детально {% endcomment %}
+        <span class="tag badge">
+          <a href="{% url 'tag_list' tag.slug %}">{{ tag }}</a></span
+        >
+        {% endfor %}
+      </div>
       {% endif %}
     </div>
   </div>
