--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load cache %}
 {% comment %} blog/templates/blog/post_detail.html {% endcomment %}
 {% load markdown_to_html %}
 {% load static %}
@@ -33,6 +34,8 @@
                     </div>
                 </div>
                 <div>
+                    {% comment %} Кеш на 60 секунд {% endcomment %}
+                    {% cache 60 post_tags %}
                     {% if post.tags.all %}
                         <div class="tags">
                             {% for tag in post.tags.all %}
@@ -43,6 +46,7 @@
                             {% endfor %}
                         </div>
                     {% endif %}
+                    {% endcache %}
                 </div>
             </div>
         </div>
